fix mobile spacing

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -101,6 +101,6 @@
 
     .experience__container > div {
         width: 100%;
-        padding: 2rem 1rem;
+        padding: 1.5rem 1.6rem;
     }
 }
